adiciona documentação do swagger ao método de exibição dos posts de pet
