# app/routes/api.php
@@ -22,7 +22,7 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::middleware('auth:sanctum')->group(function () {
-   Route::resource('pets/posts', PetPostsController::class);
+   Route::resource('pet/posts', PetPostsController::class);
 });
 
 Route::post('/login', [AuthController::class, 'login']);
